# testcamtab5

components/detect/: CMakeLists.txt  test_cam_sensor_detect.c
components/esp_cam_sensor/sensors/sc202cs/: sc202cs.c
components/esp_cam_sensor/src /: esp_cam_sensor.c
components/esp_cam_sensor_esphome/: CMakeLists.txt  esp_cam_sensor_wrapper.cpp
components/esp_video/src/: esp_video.c
components/esp_video/src/device/: esp_video_csi_device.c
components/esp_video_esphome/: CMakeLists.txt  __init__.py  esp_video.h  esp_video_internal.h  esp_video_wrapper.cpp  esp_video_wrapper.h
components/lvgl_camera_display/: CMakeLists.txt  __init__.py  lvgl_camera_display.cpp  lvgl_camera_display.h
components/sensors_sc202cs/: CMakeLists.txt
components/tab5_camera/: CMakeLists.txt  __init__.py  camera.py  csi_capture.cpp  esp_cam_sensor.h  esp_cam_sensor_types.h  esp_cam_sensor_wrapper.h  esp_video_ioctl.h  esp_video_isp_ioctl.h  idf_component.yml  platformio_override.ini  sc202cs.c  tab5_camera .cpp  tab5_camera.cpp  tab5_camera.h  tab5_camera_dvp.h  tab5_camera_sensor.cpp  tab5_camera_sensor.h  tab5_camera_sensor_impl.cpp  v4l2_minimal.h
components/tab5_camera/esp_cam_sensor_esphome/: __init__.py
