idf_component_register(
    SRCS 
        "esp_video_wrapper.cpp"
        # Sources du composant video
        "${COMPONENT_PATH}/../video/esp_video.c"
        "${COMPONENT_PATH}/../video/esp_video_buffer.c"
        "${COMPONENT_PATH}/../video/esp_video_csi_device.c"
        "${COMPONENT_PATH}/../video/esp_video_isp_device.c"
        "${COMPONENT_PATH}/../video/esp_video_init.c"
        "${COMPONENT_PATH}/../video/esp_video_sensor.c"
    INCLUDE_DIRS 
        "."
        "${COMPONENT_PATH}/../video"
    REQUIRES
        esp_driver_i2c
        esp_driver_isp
        esp_driver_cam
        esp_mm
        esphome
        esp_cam_sensor_esphome
)
